# tic_tac_toe

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: tictac.cpp  tictac.hpp
test/: test_tictac.cpp
